# Codex-GUI-for-Fedora

./: README.md  codex-gui  pyproject.toml
codex_gui/: __init__.py  app.py
data/: codex-gui.desktop
packaging/: codex-gui.spec
scripts/: install-codex-cli-user.sh  install-fedora.sh
